--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+node_modules/
 
-# testing
-/coverage
+# next
+.next/
+out/
 
-# next.js
-/.next/
-/out/
+# vercel
+.vercel/
 
-# production
-/build
+# env (NUNCA commitar)
+.env
+.env.*
 
-# misc
-.DS_Store
+# local keys / secrets
+serviceAccount*.json
 *.pem
+*.key
 
-# debug
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# OS
+.DS_Store
+Thumbs.db
