--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "backup:local": "node scripts/backup-firestore.mjs"
   },
   "dependencies": {
     "firebase": "^12.8.0",
